# zundan_studio

./: .dockerignore  .gitignore  .vulture  BATCH_VIDEO_GENERATION.md  Dockerfile  IMPLEMENTATION_GUIDE.md  RANDOM_TITLE_FEATURE.md  README.md  backgrounds.json.example  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_json_loading.py  test_mouth_sync.py
.claude/: CLAUDE.md
.cursor/commands/: zundamonrules.md
.streamlit/: config.toml
backend/: Dockerfile  requirements.txt
backend/app/: __init__.py  main.py
config/: __init__.py  app.py  bgm_library.py  characters.py  closing_section.py  content.py  defaults.py  models.py
doc/: persona.md  theme.md
frontend/: Dockerfile  index.html  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
src/: __init__.py  audio_combiner.py  frame_generator.py  resource_manager.py  subtitle_generator.py  utils.py  video_generator.py  video_models.py
src/config/: bgm_library.py
src/core/: asset_generator_base.py  audio_processor.py  background_generator.py  background_remover.py  generate_food_over.py  generate_food_over_sectioned.py  item_generator.py  outline_generator.py  video_processor.py  voice_generator.py
src/models/: food_over.py  video_models.py
src/prompts/: food_system_template.md  food_system_template.txt  food_user_template.md  food_user_template.txt  item_prompt_creator.md
src/services/: audio_combiner.py  bgm_mixer.py  frame_generator.py  item_manager.py  resource_manager.py  subtitle_generator.py  video_generator.py
src/utils/: llm_factory.py  (+2 more)
(+260 files in other folders)
