[tool.poetry]
name = "zundan-studio"
version = "0.1.0"
description = "Video generation application with Zundamon character using VOICEVOX"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = ">=1.28.0"
requests = ">=2.31.0"
moviepy = ">=1.0.3"
opencv-python = ">=4.8.0"
numpy = ">=1.24.0"
librosa = ">=0.10.0"
pillow = ">=10.0.0"
soundfile = ">=0.12.1"
scipy = ">=1.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
flake8 = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"